# if3230-tubes-bbs

./: .gitignore  Cargo.toml  README.md  client.py  makefile  server.py  tester.py
lib/: address.rs  app.py  raft.py
src/: lib.rs
src/client/: client.rs
src/server/: raft.rs  server.rs
src/server/raft/: message_queue.rs
