[package]
name = "if3230-tubes-bbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = "0.15.1"
axum = "0.6.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[[bin]]
name = "server"
path = "src/server/server.rs"